--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@
 .history
 .svn/
 migrate_working_dir/
+./lib/api_key.dart
+*.freezed.dart
+*.g.dart
 
 # IntelliJ related
 *.iml
@@ -19,7 +22,7 @@ migrate_working_dir/
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
 # is commented out by default.
-#.vscode/
+.vscode/
 
 # Flutter/Dart/Pub related
 **/doc/api/
@@ -31,6 +34,11 @@ migrate_working_dir/
 .pub-cache/
 .pub/
 /build/
+/ios/build/
+/lib/generated/
+
+# Web related
+lib/generated_plugin_registrant.dart
 
 # Symbolication related
 app.*.symbols
@@ -42,3 +50,7 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# genrated build_runner files
+lib/generated/
+
