Added Dependency Injection and cubit Dapp browser

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
   dio: ^5.0.3
   flutter_bloc: ^8.1.2
   freezed_annotation: ^2.2.0
+  flutter_injected_web3: ^1.0.1
+  flutter_inappwebview: ^5.7.2+3
+  injectable: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -28,6 +31,7 @@ dev_dependencies:
   json_serializable: ^6.6.1
   build_runner: ^2.3.3
   freezed: ^2.3.2
+  injectable_generator: ^2.1.4
 
 flutter:
   uses-material-design: true
