--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,9 @@ dependencies:
   injectable: ^2.1.0
   dio_cache_interceptor: ^3.4.0
   get_it: ^7.2.0
-
+  bloc: ^8.1.1
+  hydrated_bloc: ^9.1.0
+  
 
 dev_dependencies:
   flutter_test:
