--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,11 @@ dependencies:
   get_it: ^7.2.0
   bloc: ^8.1.1
   hydrated_bloc: ^9.1.0
+  flutter_downloader: ^1.10.2
+  android_path_provider: ^0.3.0
+  device_info_plus: ^8.1.0
+  path_provider: ^2.0.13
+  permission_handler: ^10.2.0
   
 
 dev_dependencies:
