--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   device_info_plus: ^8.1.0
   path_provider: ^2.0.13
   permission_handler: ^10.2.0
+  installed_apps: ^1.3.1
   
 
 dev_dependencies:
