--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   installed_apps: ^1.3.1
   wallet_connect_dart_v2: ^0.0.1
   url_launcher: ^6.1.10
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   
 
 dev_dependencies:
@@ -45,6 +47,7 @@ dev_dependencies:
   build_runner: ^2.3.3
   freezed: ^2.3.2
   injectable_generator: ^2.1.4
+  hive_generator: ^2.0.0
 
 flutter:
   uses-material-design: true
