--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   url_launcher: ^6.1.10
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  android_intent_plus: ^3.1.6
+  flutter_localization: ^0.1.10
   
 
 dev_dependencies:
