--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   hive_flutter: ^1.1.0
   android_intent_plus: ^3.1.6
   flutter_localization: ^0.1.10
+  intl: ^0.17.0
   
 
 dev_dependencies:
