--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   android_intent_plus: ^3.1.6
   flutter_localization: ^0.1.10
   intl: ^0.17.0
+  flutter_install_app: ^1.3.0
+
   
 
 dev_dependencies:
