--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   flutter_localization: ^0.1.10
   intl: ^0.17.0
   flutter_install_app: ^1.3.0
+  cached_network_image: ^3.2.3
+  shimmer_animation: ^2.1.0+1
+  jovial_svg: 1.1.9
 
   
 
