--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   cached_network_image: ^3.2.3
   shimmer_animation: ^2.1.0+1
   jovial_svg: 1.1.9
+  flutter_rating_bar: ^4.0.1
 
   
 
