--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,9 @@ dependencies:
   android_intent_plus: ^3.1.6
   flutter_localization: ^0.1.10
   intl: ^0.17.0
-  flutter_install_app: ^1.3.0
+  flutter_app_installer:
+    git:
+      url: https://github.com/Abhimanyu121/flutter-app-installer
   cached_network_image: ^3.2.3
   shimmer_animation: ^2.1.0+1
   jovial_svg: 1.1.9
