--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,8 +47,10 @@ dependencies:
   shimmer_animation: ^2.1.0+1
   jovial_svg: 1.1.9
   flutter_rating_bar: ^4.0.1
+  eth_sig_util: 0.0.7
 
-  
+# dependency_overrides:
+  # stream_channel: ^2.1.1 
 
 dev_dependencies:
   flutter_test:
