--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   jovial_svg: 1.1.9
   flutter_rating_bar: ^4.0.1
   eth_sig_util: 0.0.7
+  sentry_flutter: ^7.3.0
 
 # dependency_overrides:
   # stream_channel: ^2.1.1 
