--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   eth_sig_util: 0.0.7
   sentry_flutter: ^7.3.0
   readmore: ^2.1.0
+  responsive_framework: ^0.2.0
 
 # dependency_overrides:
   # stream_channel: ^2.1.1 
