--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   responsive_framework: ^0.2.0
   flutter_spinkit: ^5.1.0
 
+  carousel_slider: ^4.2.1
 
 # dependency_overrides:
   # stream_channel: ^2.1.1 
