--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,10 @@ dependencies:
   get_it: ^7.2.0
   bloc: ^8.1.1
   hydrated_bloc: ^9.1.0
-  flutter_downloader: ^1.10.2
+  flutter_downloader:
+    git:
+      url: https://github.com/Abhimanyu121/flutter_downloader
+      ref: 3aa04ec625f6c79779ee49edf24ecb483d8a2fcc
   android_path_provider: ^0.3.0
   device_info_plus: ^8.1.0
   path_provider: ^2.0.13
