--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,8 @@ dependencies:
   flutter_downloader:
     git:
       url: https://github.com/Abhimanyu121/flutter_downloader
-      ref: 3aa04ec625f6c79779ee49edf24ecb483d8a2fcc
+      ref: 95fb7943b9b41d1185b699fa95a9236df2ca3756
+#      ref: 3aa04ec625f6c79779ee49edf24ecb483d8a2fcc
   android_path_provider: ^0.3.0
   device_info_plus: ^8.1.0
   path_provider: ^2.0.13
