--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   flutter_spinkit: ^5.1.0
 
   carousel_slider: ^4.2.1
+  flutter_native_splash: 2.2.17
 
 # dependency_overrides:
   # stream_channel: ^2.1.1 
@@ -104,3 +105,18 @@ flutter:
           style: italic
         - asset: assets/fonts/GeneralSans-MediumItalic.ttf
           weight: 500
+
+flutter_native_splash:
+  color: "#000000"
+  image: assets/images/htc_logo_space.png
+  branding: assets/images/htc_logo_space.png
+  image_dark: assets/images/htc_logo_space.png
+  branding_dark: assets/images/htc_logo_space.png
+
+  android_12:
+    image: assets/images/htc_logo_space.png
+    icon_background_color: "#000000"
+    image_dark: assets/images/htc_logo_space.png
+    icon_background_color_dark: "#000000"
+
+  web: false
