--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,9 +60,9 @@ dependencies:
   readmore: ^2.1.0
   responsive_framework: ^0.2.0
   flutter_spinkit: ^5.1.0
-
   carousel_slider: ^4.2.1
   flutter_native_splash: 2.2.17
+  package_info_plus: ^3.0.3
 
 # dependency_overrides:
   # stream_channel: ^2.1.1 
