--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   carousel_slider: ^4.2.1
   flutter_native_splash: 2.2.17
   package_info_plus: ^3.0.3
+  dio_cache_interceptor_hive_store: ^3.2.1
 
 # dependency_overrides:
   # stream_channel: ^2.1.1 
