--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,8 @@ dependencies:
   flutter_native_splash: 2.2.17
   package_info_plus: ^3.0.3
   dio_cache_interceptor_hive_store: ^3.2.1
+  flutter_phoenix: 1.1.0
+  internet_connection_checker: ^1.0.0+1
 
 # dependency_overrides:
   # stream_channel: ^2.1.1 
