--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   dio_cache_interceptor_hive_store: ^3.2.1
   flutter_phoenix: 1.1.0
   internet_connection_checker: ^1.0.0+1
+  random_avatar: ^0.0.7
 
 # dependency_overrides:
   # stream_channel: ^2.1.1 
