--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   version: ^3.0.2
   permission_handler_platform_interface: ^3.9.0
   notification_permissions: ^0.6.1
+  flutter_displaymode: ^0.5.0
 
 # dependency_overrides:
   # stream_channel: ^2.1.1 
