--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,7 @@ dependencies:
   shimmer_animation: ^2.1.0+1
   jovial_svg: 1.1.9
   flutter_rating_bar: ^4.0.1
-  eth_sig_util: 0.0.7
+  eth_sig_util: ^0.0.9
   sentry_flutter: ^7.3.0
   readmore: ^2.1.0
   responsive_framework: ^0.2.0
